# ML6_Project

./: .gitignore  README.md  extract_best_checkpoint.py  pyproject.toml
bart_output_small/best_model_small/: best_params.txt
finetuned/bart_output_large/best_model_large/: best_params.txt
finetuned/t5_large_10_trials_best/: t5_large_10_best_params.txt
finetuned/t5_small_15_trials_best_additional_preprocess/: t5_small_15_best_params_additional_preprocess.txt
src/: main.py  preprocessing.py  t5_finetuning.py
src/ml6_project/: bart_finetuning.py  bart_finetuniny_large.py  evaluation.py  extract_best_checkpoint.py  inference.py  preprocessing.py  qualitative_results.py  save_pretrained.py  t5_finetuning.py  test_model_loading.py
t5_small_15_trials_best/: t5_small_15_best_params.txt
t5_small_15_trials_best_no_preprocess/: t5_small_15_nopreprocess_best_params.txt
