[project]
name = "ml6-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Liad Magen",email = "liad.magen@edu.fh-campuswien.ac.at"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ml6_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
