[project]
name = "ml6-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Sarah Abdul Kader",email = "sarah.abdul.kader@stud.fh-campuswien.ac.at"},
    {name = "Anna Lackner",email = "anna.lackner@stud.fh-campuswien.ac.at"},
    {name = "Angelina Radovanov",email = "angelina.radovanov@stud.fh-campuswien.ac.at"},
    {name = "Fabian Schambeck",email = "fabian.schambeck@stud.fh-campuswien.ac.at"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "contractions (>=0.1.73,<0.2.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "transformers (>=4.30,<5.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "accelerate (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "ml6_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
